# tiny

./: CMakeLists.txt  build.sh  sv-main.cpp
src/: server.hpp  serverinfo.hpp
src/common/: info_const.hpp
